--- a/1-Python Basics/test.ipynb
+++ b/1-Python Basics/test.ipynb
@@ -2,8 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "afcbb6bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1.5+8)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "291d5ad9",
+   "id": "8dca7095",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -16,7 +34,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.0"
   }
  },
